2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs:
	* MonoDevelop.AddinAuthoring/AddinDescriptionDisplayBinding.cs:
	Track api changes.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AddinAuthoring/AddinData.cs:
	* MonoDevelop.AddinAuthoring/SolutionAddinData.cs:
	* MonoDevelop.AddinAuthoring/AddinProjectExtension.cs:
	* MonoDevelop.AddinAuthoring/AddinProjectReference.cs:
	* MonoDevelop.AddinAuthoring/AddinDescriptionWidget.cs:
	Introduced the ConfigurationSelector class to all methods that
	previously took a configuration name as string. This
	eliminates the ambiguity between solution configuration names
	and project configuration names.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* MonoDevelop.AddinAuthoring.addin.xml: Bump MD version.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.AddinAuthoring/AddinDescriptionView.cs:
	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs: Improve
	formatting of saved .addin files.

	* MonoDevelop.AddinAuthoring/AddinData.cs: Remove debug code.

	* MonoDevelop.AddinAuthoring.CodeCompletion/CodeCompletionExtension.cs:
	Track api changes.

2009-10-01  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* addin-reference.png:
	* MonoDevelop.AddinAuthoring.sln:
	* MonoDevelop.AddinAuthoring.make:
	* MonoDevelop.AddinAuthoring.csproj:
	* MonoDevelop.AddinAuthoring.addin.xml:
	* MonoDevelop.AddinAuthoring/AddinData.cs:
	* MonoDevelop.AddinAuthoring/AddinDescriptionView.cs:
	* MonoDevelop.AddinAuthoring/AddinProjectExtension.cs:
	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs:
	* MonoDevelop.AddinAuthoring/AddinDescriptionDisplayBinding.cs:
	* MonoDevelop.AddinAuthoring.NodeBuilders/ReferenceNodeBuilder.cs: