@@ -1,5 +1,10 @@
 2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* MonoDevelop.AddinAuthoring/AddinFeatureWidget.cs: Track api
+	changes.
+
+2010-01-28  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* MonoDevelop.AddinAuthoring/AddinAuthoringService.cs:
 	* MonoDevelop.AddinAuthoring/AddinDescriptionDisplayBinding.cs:
 	Track api changes.
